test/tests/stages/14_pointers/valid/casts/cast_between_pointer_types.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[175]:
  int
  identifier(check_null_ptr_cast)
  (
  void
  )
  {
  static
  long
  *
  identifier(long_ptr)
  =
  const int(0)
  ;
  double
  *
  identifier(dbl_ptr)
  =
  (
  double
  *
  )
  identifier(long_ptr)
  ;
  unsigned
  int
  *
  identifier(int_ptr)
  =
  (
  unsigned
  int
  *
  )
  identifier(long_ptr)
  ;
  int
  *
  *
  identifier(ptr_ptr)
  =
  (
  int
  *
  *
  )
  identifier(long_ptr)
  ;
  if
  (
  identifier(long_ptr)
  )
  {
  return
  const int(1)
  ;
  }
  if
  (
  identifier(dbl_ptr)
  )
  {
  return
  const int(2)
  ;
  }
  if
  (
  identifier(int_ptr)
  )
  {
  return
  const int(3)
  ;
  }
  if
  (
  identifier(ptr_ptr)
  )
  {
  return
  const int(4)
  ;
  }
  return
  const int(0)
  ;
  }
  int
  identifier(check_round_trip)
  (
  void
  )
  {
  long
  identifier(l)
  =
  -
  const int(1)
  ;
  long
  *
  identifier(long_ptr)
  =
  &
  identifier(l)
  ;
  double
  *
  identifier(dbl_ptr)
  =
  (
  double
  *
  )
  identifier(long_ptr)
  ;
  long
  *
  identifier(other_long_ptr)
  =
  (
  long
  *
  )
  identifier(dbl_ptr)
  ;
  if
  (
  *
  identifier(other_long_ptr)
  !=
  -
  const int(1)
  )
  {
  return
  const int(5)
  ;
  }
  return
  const int(0)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(result)
  =
  identifier(check_null_ptr_cast)
  (
  )
  ;
  if
  (
  identifier(result)
  )
  {
  return
  identifier(result)
  ;
  }
  identifier(result)
  =
  identifier(check_round_trip)
  (
  )
  ;
  return
  identifier(result)
  ;
  }
