test/tests/stages/14_pointers/invalid_types/dereference_non_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  unsigned
  long
  identifier(l)
  =
  const unsigned long(100ul)
  ;
  return
  *
  identifier(l)
  ;
  }
